--- a/School.UI/Views/TeacherRegister/_ViewTeacher.cshtml
+++ b/School.UI/Views/TeacherRegister/_ViewTeacher.cshtml
@@ -27,7 +27,7 @@
 
     <div class="col-md-12" style="border: 0px solid white; display: block;">
 
-        <div class="card_t card-s">
+        <div class="card_t card-s" style="height:54px;">
 
             <div class="col-xs-12 form-horizontal">
 
