--- a/School.UI/Views/Shared/_PartialLayoutMenu.cshtml
+++ b/School.UI/Views/Shared/_PartialLayoutMenu.cshtml
@@ -120,29 +120,7 @@
         width: auto;
     }
 
-    #txtSearchSurburb {
-        width: 100%;
-        height: 25px;
-    }
 
-    .inneMsg {
-        position: relative;
-        min-height: 30px;
-    }
-
-    .senderMsg {
-        min-height: 30px;
-        left: 2px;
-        position: absolute;
-    }
-
-    .notifyMsg {
-        height: 15px;
-        bottom: 2px;
-        right: 2px;
-        font: 10px;
-        position: absolute;
-    }
 
     .advertHere-boxShadow {
         /*box-shadow: 0px 0px 3px 1px rgba(59, 90, 108,0.5);*/
@@ -169,15 +147,9 @@
         /*background-color: orangered;*/
     }
     .treeview {
-        border: 2px solid black;
+        border-bottom: 1px solid rgb(232, 232, 232);
     }
 
-    .advertHere {
-        border: 1px solid black;
-    }
-    .centerChild {
-        text-align: center;
-    }
 </style>
 
 <aside id="menuId" class="main-sidebar">
