--- a/School.UI/Views/Shared/_LayoutRightHeader.cshtml
+++ b/School.UI/Views/Shared/_LayoutRightHeader.cshtml
@@ -87,7 +87,8 @@
         width: 62px;
         transform: skew(-15deg);
         padding-left: 2px;
-        color:wheat;
+        /*color:wheat;*/
+        color:darkgreen;
     }
 
         .loIng-label:hover, .register-label:hover {
