--- a/School.UI/Views/Shared/_PartialLayoutMenu.cshtml
+++ b/School.UI/Views/Shared/_PartialLayoutMenu.cshtml
@@ -171,7 +171,7 @@
                 </a>
                 <ul id="ul-provinceId" class="sidebar-submenu treeview-menu" style="width:auto;">
                     <li id=student2 name="student" style="display:block" onclick="callController('/StudentResult/GetRecord','Student Report')"><a href="#"><i class="fa fa-circle-o"></i>Student Report</a></li>
-                    <li id=student3 name="student" style="display:block" onclick="callController('/StudentSubjectMarks/GetRecord','Record Marks')"><a href="#"><i class="fa fa-circle-o"></i>Record Marks</a></li>
+                    <li id=student3 name="student" style="display:block" onclick="callController('/StudentMarks/GetRecord','Record Marks')"><a href="#"><i class="fa fa-circle-o"></i>Record Marks</a></li>
                     <li id=student3 name="student" style="display:block" onclick="callController('/StudentAttendance/GetRecord','Student Attendance')"><a href="#"><i class="fa fa-circle-o"></i>Student Attendance</a></li>
                 </ul>
             </li>
@@ -243,7 +243,7 @@
                 <ul id="ul-provinceId" class="sidebar-submenu treeview-menu" style="width:auto;">
                     <li id=student3 name="student" style="display:block" onclick="callController('/TeacherRegister/CreateRecord','Create Teacher')"><a href="#"><i class="fa fa-circle-o"></i>Create Teacher</a></li>
                     <li id=student1 name="student" style="display:block" onclick="callController('/TeacherRegister/GetRecord','View Teacher')"><a href="#"><i class="fa fa-circle-o"></i>View Teacher</a></li>
-                    <li id=student1 name="student" style="display:block" onclick="callController('/TeacherRoles/CreateRoles','Create Roles')"><a href="#"><i class="fa fa-circle-o"></i>Create Roles</a></li>
+                    <li id=student1 name="student" style="display:none" onclick="callController('/TeacherRoles/CreateRoles','Create Roles')"><a href="#"><i class="fa fa-circle-o"></i>Create Roles</a></li>
                     @*<li id=student3 name="student" style="display:block" onclick="callController('/Teacher/AddRecord','Create Teacher')"><a href="#"><i class="fa fa-circle-o"></i>Create Teacher</a></li>
         <li id=student1 name="student" style="display:block" onclick="callController('/Teacher/GetRecord','View Teacher')"><a href="#"><i class="fa fa-circle-o"></i>View Teacher</a></li>*@
                 </ul>
