--- a/School.UI/Views/Shared/_defaultDashboard.cshtml
+++ b/School.UI/Views/Shared/_defaultDashboard.cshtml
@@ -10,7 +10,7 @@
                 <div class="divBody col-xs-12" style="min-height:90px;">
 
                     <h5 class="col-xs-12">
-                        More About Software Developer
+                        More About Quater One
                     </h5>
                     <h5 class="col-xs-12">
                         <span style="color: orange;">mySchool.com </span>
@@ -34,7 +34,7 @@
                 <div class="divBody col-xs-12" style="min-height:90px;">
 
                     <h5 class="col-xs-12">
-                        More About Software Developer
+                        More About Quater Two
                     </h5>
                     <h5 class="col-xs-12">
                         <span style="color: orange;">mySchool.com </span>
@@ -58,7 +58,7 @@
                 <div class="divBody col-xs-12" style="min-height:90px;">
 
                     <h5 class="col-xs-12">
-                        More About Software Developer
+                        More About Quater Three
                     </h5>
                     <h5 class="col-xs-12">
                         <span style="color: orange;">mySchool.com </span>
@@ -85,7 +85,7 @@
                 <div class="divBody col-xs-12" style="min-height:90px;border:0px solid wheat;">
 
                     <h5 class="col-xs-12">
-                        More About Software Developer
+                        More About Teachers
                     </h5>
                     <h5 class="col-xs-12">
                         <span style="color: orange;">mySchool.com </span>
@@ -109,7 +109,7 @@
                 <div class="divBody col-xs-12" style="min-height:90px;border:0px solid wheat;">
 
                     <h5 class="col-xs-12">
-                        More About Software Developer
+                        More About Teachers
                     </h5>
                     <h5 class="col-xs-12">
                         <span style="color: orange;">mySchool.com </span>
@@ -133,7 +133,7 @@
                 <div class="divBody col-xs-12" style="min-height:90px;border:0px solid wheat;">
 
                     <h5 class="col-xs-12">
-                        More About Software Developer
+                        More About Class Rooms
                     </h5>
                     <h5 class="col-xs-12">
                         <span style="color: orange;">mySchool.com </span>
@@ -160,7 +160,7 @@
                 <div class="divBody col-xs-12" style="min-height:90px;border:0px solid wheat;">
 
                     <h5 class="col-xs-12">
-                        More About Software Developer
+                        More About Sphiwe Developer
                     </h5>
                     <h5 class="col-xs-12">
                         <span style="color: orange;">mySchool.com </span>
@@ -184,7 +184,7 @@
                 <div class="divBody col-xs-12" style="min-height:90px;border:0px solid wheat;">
 
                     <h5 class="col-xs-12">
-                        More About Software Developer
+                        More About Sphiwe Developer
                     </h5>
                     <h5 class="col-xs-12">
                         <span style="color: orange;">mySchool.com </span>
@@ -208,7 +208,7 @@
                 <div class="divBody col-xs-12" style="min-height:90px;border:0px solid wheat;">
 
                     <h5 class="col-xs-12">
-                        More About Software Developer
+                        More About Sphiwe Developer
                     </h5>
                     <h5 class="col-xs-12">
                         <span style="color: orange;">mySchool.com </span>
