--- a/School.UI/Views/Shared/_PartialLayoutMenu.cshtml
+++ b/School.UI/Views/Shared/_PartialLayoutMenu.cshtml
@@ -207,7 +207,7 @@
             <li class="treeview" id="menu-course" style="display:block;width:auto;">
                 <a href="#" class="aprovince">
                     <i class="fa fa-book"></i>
-                    <span class="menu-header-name">Grade/Courses</span>
+                    <span class="menu-header-name">Grades/Courses</span>
                     <span class="pull-right-container">
                         <i class="fa fa-angle-down pull-right erroSign"></i>
                     </span>
